syntax = "proto3";

package delayqueue;

service DelayQueue {
    rpc Ping (PingRequest) returns (PingReply) {
    }

    rpc Push (PushRequest) returns (PushReply) {
    }

    rpc Pop (PopRequest) returns (PopReply) {
    }

    rpc Del (DelRequest) returns (DelReply) {
    }
}
//Ping
message PingRequest {
    string msg = 1;
}
message PingReply {
    string msg = 1;
}

//Push
message PushRequest {
    string data = 1;
    int64 delaySeconds = 2; //time of data stay in queue
    string notify_url = 3; //http notify model; if notify_url is empty, you can polling by grpc interface 'Pop'
}
message PushReply {
    string dataId = 1; //unique id of data which Pushed.
}

//Pop
message PopRequest {
    int64 timeout = 1; // block Seconds
}
message PopReply {
    string data = 1;
}

//Del
message DelRequest {
    string dataId = 1;
}
message DelReply {
}
